Update memoryManagement.md